Disconnect with RECEIPT frame
- Added functionality to wait for a receipt frame with a given timeout
- Tested with the disconnect frame